--- a/pom.xml
+++ b/pom.xml
@@ -13,19 +13,15 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>assets matching engine</name>
     <description>assets matching engine</description>
-    <url/>
-    <licenses>
-        <license/>
-    </licenses>
+
+
     <developers>
-        <developer/>
+        <developer>
+            <name>Muhammad Ali</name>
+            <email>muhammadali40k@gmail.com</email>
+        </developer>
     </developers>
-    <scm>
-        <connection/>
-        <developerConnection/>
-        <tag/>
-        <url/>
-    </scm>
+
     <properties>
         <java.version>21</java.version>
     </properties>
@@ -106,7 +102,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.8</version>
+                <version>0.8.13</version>
                 <executions>
                     <execution>
                         <goals>
