--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -117,6 +117,8 @@ jobs:
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
+          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
+
           git add README.md
           git commit -m "Update README with latest coverage badges" || echo "No changes to commit"
 
